# qt_progress_dialog_freezes

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  my_other_widget.cpp  my_other_widget.h  my_widget.cpp  my_widget.h  progress_dialog.cpp  progress_dialog.h  state_machine.cpp  state_machine.h  state_machine_worker.cpp  state_machine_worker.h
